tdf#159906 - A11Y: Add new direct character formatting group level

for Formatted warnings and keep them not expanded (default) to avoid
to many visible warning message on the sidebar.

Change-Id: Ic251909d793198c3c4ce5e132b763c15ac1c9a9e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169110
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
(cherry picked from commit e74a5bea04483dc96ef6d4b34edd8735ec73bcd8)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169296
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>